# allianceauth-graphql

./: .coveragerc  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-publish.yml  python-test.yml
allianceauth_graphql/: __init__.py  apps.py  auth_hooks.py  decorators.py  schema.py  urls.py
allianceauth_graphql/authentication/: errors.py  forms.py  mutations.py  queries.py  types.py  views.py
allianceauth_graphql/community_creations/allianceauth_pve_integration/: inputs.py  mutations.py  queries.py  types.py
allianceauth_graphql/corputils/: mutations.py  queries.py  types.py
allianceauth_graphql/esi/: queries.py  types.py
allianceauth_graphql/eveonline/: mutations.py  queries.py  types.py
allianceauth_graphql/fleetactivitytracking/: mutations.py  queries.py  types.py
allianceauth_graphql/groupmanagement/: mutations.py  queries.py  types.py
allianceauth_graphql/hrappications/: types.py
allianceauth_graphql/hrapplications/: inputs.py  mutations.py  queries.py  types.py
allianceauth_graphql/notifications/: mutations.py  queries.py  types.py
allianceauth_graphql/optimer/: forms.py  mutations.py  queries.py  types.py
allianceauth_graphql/permissions_tool/: queries.py  types.py
allianceauth_graphql/srp/: forms.py  mutations.py  queries.py  types.py
allianceauth_graphql/tests/: test_analytics.py  test_authentication.py  test_community_creation_allianceauth_pve.py  test_corputils.py  test_esi.py  test_eveonline.py  test_fleetactivitytracking.py  test_groupmanagement.py  test_hrapplications.py  test_notifications.py  test_optimer.py  test_permission_tool.py  test_srp.py  test_timerboard.py
allianceauth_graphql/timerboard/: inputs.py  mutations.py  queries.py  types.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
testauth/: celery.py  settings.py  urls.py
tests/: __init__.py  test_allianceauth_graphql.py
