[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "allianceauth-graphql"
dynamic = ["version"]
authors = [
    {name = "Matteo Ghia", email = "matteo.ghia@yahoo.it"},
]
classifiers = [
    "Environment :: Web Environment",
	"Framework :: Django",
	"Framework :: Django :: 4",
	"Framework :: Django :: 4.0",
	"Operating System :: POSIX :: Linux",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
description = "GraphQL integration for AllianceAuth"
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
	"allianceauth_graphql",
	"GraphQL",
]
requires-python = "~=3.8"
dependencies = [
    "allianceauth~=3.8.0",
	"graphene-django~=3.0.0",
	"django-graphql-jwt~=0.3.0",
	"allianceauth-app-utils~=1.15",
]

[project.urls]
Homepage = "https://github.com/Maestro-Zacht/allianceauth-graphql"
Source = "https://github.com/Maestro-Zacht/allianceauth-graphql"
Tracker = "https://github.com/Maestro-Zacht/allianceauth-graphql/issues"
Changelog = "https://github.com/Maestro-Zacht/allianceauth-graphql/releases"

[tool.flit.module]
name = "allianceauth_graphql"
