[bumpversion]
current_version = 0.16.0
commit = True
tag = True
sign_tags = True

[bumpversion:file:allianceauth_graphql/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = allianceauth_graphql
version = attr: allianceauth_graphql.__version__
author_email = matteo.ghia@yahoo.it
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4
	Framework :: Django :: 4.0
	Operating System :: POSIX :: Linux
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = GraphQL integration for AllianceAuth
license = GNU General Public License v3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	allianceauth
	allianceauth_graphql
	GraphQL
	eveonline
url = https://github.com/Maestro-Zacht/allianceauth-graphql

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	allianceauth>=3.0.0,<4.0.0
	graphene-django==3.0.0b7
	graphql-core<3.1.7
	django-graphql-jwt>=0.3.0,<0.4.0
include_package_data = True
zip_safe = False

[options.extras_require]
allianceauth-pve = 
	allianceauth-pve>=1.1.0,<1.2.0

[options.packages.find]
include = allianceauth_pve*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
