[bumpversion]
current_version = 1.2.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(b(?P<beta>\d+))?
serialize = 
	{major}.{minor}.{patch}b{beta}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True

[bumpversion:file:allianceauth_graphql/__init__.py]

[metadata]
name = allianceauth_graphql
version = attr: allianceauth_graphql.__version__
author_email = matteo.ghia@yahoo.it
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 4
	Framework :: Django :: 4.0
	Operating System :: POSIX :: Linux
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = GraphQL integration for AllianceAuth
license = GNU General Public License v3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	allianceauth
	allianceauth_graphql
	GraphQL
	eveonline
url = https://github.com/Maestro-Zacht/allianceauth-graphql

[options]
packages = find:
python_requires = ~=3.8
install_requires = 
	allianceauth~=3.5.0
	graphene-django~=3.0.0
	django-graphql-jwt~=0.3.0
	allianceauth-app-utils~=1.15
include_package_data = True
zip_safe = False

[options.packages.find]
include = allianceauth_graphql*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
